# opengl_project_template

./: CMakeLists.txt  main.cpp
